add ordering options for elements & better code to move them

--- a/shared/mainwindow.ui
+++ b/shared/mainwindow.ui
@@ -76,6 +76,8 @@
      <addaction name="actionDuplicateElements"/>
      <addaction name="actionRaiseElement"/>
      <addaction name="actionLowerElement"/>
+     <addaction name="actionBringElementToFront"/>
+     <addaction name="actionBringElementToBack"/>
     </widget>
     <addaction name="actionStart"/>
     <addaction name="separator"/>
@@ -661,6 +663,28 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Down</string>
+   </property>
+  </action>
+  <action name="actionBringElementToFront">
+   <property name="icon">
+    <iconset theme="object-order-front"/>
+   </property>
+   <property name="text">
+    <string>Envoyer au premier plan</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+F</string>
+   </property>
+  </action>
+  <action name="actionBringElementToBack">
+   <property name="icon">
+    <iconset theme="object-order-back"/>
+   </property>
+   <property name="text">
+    <string>Envoyer à l'arrière plan</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+B</string>
    </property>
   </action>
  </widget>
@@ -1330,6 +1354,38 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionBringElementToBack</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>bringElementToBack()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionBringElementToFront</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>bringElementToFront()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>createEmptySlide()</slot>
@@ -1358,5 +1414,7 @@
   <slot>slideItemChanged(QListWidgetItem*)</slot>
   <slot>elementItemChanged(QTreeWidgetItem*,int)</slot>
   <slot>elementSelectionChanged()</slot>
+  <slot>bringElementToBack()</slot>
+  <slot>bringElementToFront()</slot>
  </slots>
 </ui>
