--- a/core/cfiSlides.qrc
+++ b/core/cfiSlides.qrc
@@ -16,6 +16,8 @@
 <file>./icons/oxygen/16x16/insert-text.png</file>
 <file>./icons/oxygen/16x16/media-playback-pause.png</file>
 <file>./icons/oxygen/16x16/media-playback-start.png</file>
+<file>./icons/oxygen/16x16/object-order-back.png</file>
+<file>./icons/oxygen/16x16/object-order-front.png</file>
 <file>./icons/oxygen/16x16/object-order-lower.png</file>
 <file>./icons/oxygen/16x16/object-order-raise.png</file>
 <file>./icons/oxygen/16x16/view-fullscreen.png</file>
