add an editor to modify the slideshow's size & unset element property

--- a/core/cfiSlides.qrc
+++ b/core/cfiSlides.qrc
@@ -10,6 +10,7 @@
 <file>./icons/oxygen/16x16/document-save.png</file>
 <file>./icons/oxygen/16x16/edit-copy.png</file>
 <file>./icons/oxygen/16x16/edit-delete.png</file>
+<file>./icons/oxygen/16x16/emblem-locked.png</file>
 <file>./icons/oxygen/16x16/help-about.png</file>
 <file>./icons/oxygen/16x16/insert-horizontal-rule.png</file>
 <file>./icons/oxygen/16x16/insert-image.png</file>
