--- a/shared/mainwindow.ui
+++ b/shared/mainwindow.ui
@@ -80,6 +80,7 @@
      <addaction name="actionBringElementToBack"/>
     </widget>
     <addaction name="actionStart"/>
+    <addaction name="actionResizeSlideshow"/>
     <addaction name="separator"/>
     <addaction name="actionAddSlide"/>
     <addaction name="actionCurrentSlide"/>
@@ -257,7 +258,9 @@
           <string>Lire</string>
          </property>
          <property name="icon">
-          <iconset theme="media-playback-start"/>
+          <iconset theme="media-playback-start">
+           <normaloff/>
+          </iconset>
          </property>
         </widget>
        </item>
@@ -267,7 +270,9 @@
           <string>Pause</string>
          </property>
          <property name="icon">
-          <iconset theme="media-playback-pause"/>
+          <iconset theme="media-playback-pause">
+           <normaloff/>
+          </iconset>
          </property>
          <property name="shortcut">
           <string>Ctrl+Space</string>
@@ -336,7 +341,9 @@
   </widget>
   <action name="actionOpen">
    <property name="icon">
-    <iconset theme="document-open"/>
+    <iconset theme="document-open">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Ouvrir</string>
@@ -347,7 +354,9 @@
   </action>
   <action name="actionNew">
    <property name="icon">
-    <iconset theme="document-new"/>
+    <iconset theme="document-new">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Nouveau</string>
@@ -358,7 +367,9 @@
   </action>
   <action name="actionSave">
    <property name="icon">
-    <iconset theme="document-save"/>
+    <iconset theme="document-save">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Enregistrer</string>
@@ -369,7 +380,9 @@
   </action>
   <action name="actionQuit">
    <property name="icon">
-    <iconset theme="window-close"/>
+    <iconset theme="window-close">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Quitter</string>
@@ -400,7 +413,9 @@
   </action>
   <action name="actionAddSlide">
    <property name="icon">
-    <iconset theme="window-new"/>
+    <iconset theme="window-new">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Ajouter une diapositive</string>
@@ -425,7 +440,9 @@
   </action>
   <action name="actionSave_as">
    <property name="icon">
-    <iconset theme="document-save-as"/>
+    <iconset theme="document-save-as">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Enregistrer sous...</string>
@@ -469,7 +486,9 @@
   </action>
   <action name="actionAbout">
    <property name="icon">
-    <iconset theme="help-about"/>
+    <iconset theme="help-about">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>À &amp;propos</string>
@@ -497,7 +516,9 @@
   </action>
   <action name="actionRenameSlide">
    <property name="icon">
-    <iconset theme="document-properties"/>
+    <iconset theme="document-properties">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Renommer la diapositive</string>
@@ -508,7 +529,9 @@
   </action>
   <action name="actionDeleteSlide">
    <property name="icon">
-    <iconset theme="edit-delete"/>
+    <iconset theme="edit-delete">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Supprimer la diapositive</string>
@@ -519,7 +542,9 @@
   </action>
   <action name="actionRepaint">
    <property name="icon">
-    <iconset theme="view-refresh"/>
+    <iconset theme="view-refresh">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Refaire le rendu</string>
@@ -533,7 +558,9 @@
   </action>
   <action name="actionStart">
    <property name="icon">
-    <iconset theme="view-fullscreen"/>
+    <iconset theme="view-fullscreen">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Démarrer</string>
@@ -544,7 +571,9 @@
   </action>
   <action name="actionDuplicateSlide">
    <property name="icon">
-    <iconset theme="edit-copy"/>
+    <iconset theme="edit-copy">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Dupliquer la diapositive</string>
@@ -555,7 +584,9 @@
   </action>
   <action name="actionMoveSlideLeft">
    <property name="icon">
-    <iconset theme="arrow-left"/>
+    <iconset theme="arrow-left">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Déplacer vers la gauche</string>
@@ -569,7 +600,9 @@
   </action>
   <action name="actionMoveSlideRight">
    <property name="icon">
-    <iconset theme="arrow-right"/>
+    <iconset theme="arrow-right">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Déplacer vers la droite</string>
@@ -583,7 +616,9 @@
   </action>
   <action name="actionPrint">
    <property name="icon">
-    <iconset theme="document-print"/>
+    <iconset theme="document-print">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Imprimer</string>
@@ -623,7 +658,9 @@
   </action>
   <action name="actionDeleteElements">
    <property name="icon">
-    <iconset theme="edit-delete"/>
+    <iconset theme="edit-delete">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Supprimer</string>
@@ -634,7 +671,9 @@
   </action>
   <action name="actionDuplicateElements">
    <property name="icon">
-    <iconset theme="edit-copy"/>
+    <iconset theme="edit-copy">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Dupliquer</string>
@@ -645,7 +684,9 @@
   </action>
   <action name="actionRaiseElement">
    <property name="icon">
-    <iconset theme="object-order-raise"/>
+    <iconset theme="object-order-raise">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Avancer vers l'avant-plan</string>
@@ -656,7 +697,9 @@
   </action>
   <action name="actionLowerElement">
    <property name="icon">
-    <iconset theme="object-order-lower"/>
+    <iconset theme="object-order-lower">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Reculer vers l'arrière-plan</string>
@@ -667,7 +710,9 @@
   </action>
   <action name="actionBringElementToFront">
    <property name="icon">
-    <iconset theme="object-order-front"/>
+    <iconset theme="object-order-front">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Envoyer au premier plan</string>
@@ -678,13 +723,20 @@
   </action>
   <action name="actionBringElementToBack">
    <property name="icon">
-    <iconset theme="object-order-back"/>
+    <iconset theme="object-order-back">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Envoyer à l'arrière plan</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+B</string>
+   </property>
+  </action>
+  <action name="actionResizeSlideshow">
+   <property name="text">
+    <string>Modifier les &amp;dimensions</string>
    </property>
   </action>
  </widget>
@@ -1386,6 +1438,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionResizeSlideshow</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>resizeSlideshow()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>createEmptySlide()</slot>
@@ -1416,5 +1484,6 @@
   <slot>elementSelectionChanged()</slot>
   <slot>bringElementToBack()</slot>
   <slot>bringElementToFront()</slot>
+  <slot>resizeSlideshow()</slot>
  </slots>
 </ui>
