--- a/plugins/helloworld/helloworld.qrc
+++ b/plugins/helloworld/helloworld.qrc
@@ -2,6 +2,7 @@
 <qresource>
 <file>./icons/oxygen/16x16/call-start.png</file>
 <file>./icons/oxygen/16x16/call-stop.png</file>
+<file>./icons/oxygen/16x16/applications-internet.png</file>
 
 <file>./icons/oxygen/22x22/call-start.png</file>
 </qresource>
