--- a/core/mainwindow.ui
+++ b/core/mainwindow.ui
@@ -336,6 +336,9 @@
        </item>
        <item>
         <widget class="QSlider" name="seekSlider">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="pageStep">
           <number>5000</number>
          </property>
